k8s/sse-example-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sse-example
  namespace: sse
  labels:
    app: sse-example
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sse-example
  template:
    metadata:
      labels:
        app: sse-example
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      containers:
        - name: sse-example
          image: ythwork/sse-example:0.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
