k8s/sse-example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sse-example
  namespace: sse
spec:
  type: ClusterIP
  selector:
    app: sse-example
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
