k8s/sse-example-ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sse-example-api
  namespace: sse
spec:
  ingressClassName: nginx
  rules:
    - host: sse.ythwork.com
      http:
        paths:
          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: sse-example
                port:
                  number: 80
