k8s/sse-example-ingress-sse.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sse-example
  namespace: sse
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  ingressClassName: nginx
  rules:
    - host: sse.ythwork.com
      http:
        paths:
          - path: /subscribe
            pathType: Prefix
            backend:
              service:
                name: sse-example
                port:
                  number: 80
